Fixing several FindBugs issues